# uniswap-universal-router-decoder

./: .coveragerc  .flake8  .gitignore  .tmp_expected_transfer.txt  .tmp_expected_v4.txt  CONTRIBUTING.md  LICENSE  README.md  coverage.json  mypy.ini  pyproject.toml  requirements.txt  requirements_install.txt  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  issue-and-bug-report.md
.github/workflows/: ci.yml  codeql.yml  tests.yml
integration_tests/: async_v3_v4_swap.py  buy_v2_sweep_pay_portion.py  buy_v2_v3_base.py  buy_v2_v3_swap.py  main.py  main_2.py  main_3.py  main_3_bsc.py  main_misc.py  permit2_batch.py  permit_transfer_from_batch.py  revert_flag_bsc.py  sell_v3.py  sell_v3_bsc.py  test_fee_token.py  test_opensea.py  test_permit2_batch.py  test_permit2_batch_README.md  test_transfers.py  v2_v3_swap.py  v3_swap_bsc.py  v3_v4_swap.py  v4.py
tests/: conftest.py  test_abi_builder.py  test_async.py  test_decoder.py  test_encoder.py  test_router_codec.py  test_router_decoder.py  test_utils.py  test_v4_codec.py
tests/resources/: transactions.py
tutorials/buy_tokens/: README.md  buy_token.py  requirements.txt
tutorials/sell_tokens/: README.md  requirements.txt  sell_token.py
uniswap_universal_router_decoder/: __init__.py  _abi_builder.py  _constants.py  _decoder.py  _encoder.py  _enums.py  router_codec.py  router_decoder.py  utils.py
