[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "uniswap-universal-router-decoder"
version = "2.1.0"
authors = [
  { name="Elnaril", email="elnaril_dev@caramail.com" },
]
description = "Decode & Encode transactions sent to the Uniswap Universal Router. Support Uniswap V2, V3 & V4"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
dependencies = [
  "web3>=6.0.0,<8.0.0",
]
keywords = ["blockchain", "ethereum", "unichain", "uniswap", "uniswap V4", "exchange", "dex", "universal router", "swap", "decoder", "encoder", "codec", "wrapper", "SDK"]

[tool.setuptools]
packages = ["uniswap_universal_router_decoder"]

[project.urls]
Homepage = "https://github.com/Elnaril/uniswap-universal-router-decoder"
Repository = "https://github.com/Elnaril/uniswap-universal-router-decoder"
Documentation = "https://github.com/Elnaril/uniswap-universal-router-decoder/blob/master/README.md"
Changelog = "https://github.com/Elnaril/uniswap-universal-router-decoder/wiki/Release_Notes"
Issues = "https://github.com/Elnaril/uniswap-universal-router-decoder/issues"
