[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "uniswap-universal-router-decoder"
version = "2.2.0.dev01"
authors = [
  { name="Elnaril", email="elnaril_dev@caramail.com" },
]
description = "Decode & Encode transactions sent to the Uniswap Universal Router. Support Uniswap V2, V3 & V4"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
license = "MIT"
keywords = ["blockchain", "ethereum", "unichain", "uniswap", "uniswap V4", "exchange", "dex", "universal router", "swap", "decoder", "encoder", "codec", "wrapper", "SDK", "asyncio"]

dependencies = [
    "typing_extensions",
    "web3>=7.14.0,<8.0.0",
]

[dependency-groups]
dev = [
    "basedpyright",
    "coverage",
    "flake8",
    "isort",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "tox",
]
packaging = [
    "build",
    "twine",
]
all = [
    { include-group = "dev"},
    { include-group = "packaging"},
]

[tool.setuptools]
packages = ["uniswap_universal_router_decoder"]

[tool.basedpyright]
include = ["uniswap_universal_router_decoder", "tests", "integration_tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportPrivateImportUsage = false
executionEnvironments = [
    { root = "tests" , extraPaths = ["."], reportMissingTypeArgument = false, reportUnknownParameterType = false, reportUnknownVariableType = false, reportUnknownMemberType = false, reportUnknownArgumentType = false, reportArgumentType = false, reportMissingParameterType = false, reportPrivateUsage = false, reportAttributeAccessIssue = "hint" },
    { root = "integration_tests" , extraPaths = ["."], reportMissingTypeArgument = false, reportUnknownParameterType = false, reportUnknownVariableType = false, reportUnknownMemberType = false, reportUnknownArgumentType = false, reportArgumentType = false, reportMissingParameterType = false, reportPrivateUsage = false, reportAttributeAccessIssue = "hint" },
]

[tool.pytest]
asyncio_mode = "auto"
filterwarnings = [
    'ignore:websockets.legacy is deprecated:DeprecationWarning',
]


[project.urls]
Homepage = "https://github.com/Elnaril/uniswap-universal-router-decoder"
Repository = "https://github.com/Elnaril/uniswap-universal-router-decoder"
Documentation = "https://github.com/Elnaril/uniswap-universal-router-decoder/blob/master/README.md"
Changelog = "https://github.com/Elnaril/uniswap-universal-router-decoder/wiki/Release_Notes"
Issues = "https://github.com/Elnaril/uniswap-universal-router-decoder/issues"
